Fix navbar icons and dropdown alignment (#143)
* Style: change navbar icons and fix alignment of dropdown menu

* Test: update snapshots

* Fix: run yarn fix

* Build: install fontawesome/solid-svg-icons

--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -172,7 +172,6 @@ li.ant-dropdown-menu-item.ant-dropdown-menu-item-only-child.navbar__languageCont
   width: 10%;
   height: 27px;
   top: 20%;
-  right: 0%;
 }
 
 @media (max-width: 768px) {
